# stm32-bitbang-spi

./: .gitignore  README.md
slave/: .cproject  .project  .ycm_extra_conf.py  CMakeLists.txt  DOIT  Makefile  STM32F407VGTX_FLASH.ld  slave.launch
slave/Core/Inc/: local.hpp  main.h  output.hpp  spi.hpp  stm32f4xx_hal_conf.h
slave/Core/Src/: main.cpp  output.cpp  spi.cpp  stm32f4xx_hal_msp.c
slave/USB_DEVICE/App/: DOIT  usbd_cdc_if.c  usbd_cdc_if.h
